<resources>
    <!-- Strings used for fragments for navigation -->


    <string name="dietary_guidelines">
        1. Avoid being overweight. Have balanced, healthy diet rather than “Special
        diabetic foods”


        \n\n2. Daily energy intake must be estimated after considering such factors as
        age, sex, actual weight in relation to desirable weight, activity and
        occupation.

        \n\n3. Eat small meals (5-6 meals) every 2-3 hours rather than a large three
        meals a day to keep the energy levels high

        \n\n4. Include carbohydrates from foods high in fibre e.g. whole grains
        (unpolished cereals and millets), whole pulses and legumes like grams,
        soy, peas, beans, etc.

        \n\n5. Proteins should provide 12-15 % of the total energy intake for people with
        diabetes. Proteins from vegetable sources like pulses, soy, grams, peas,
        low fat milk, low fat curds, fish and lean meats are recommended

        \n\n6. It is advised to consume less than 10% of calories from saturated fat and
        less than 300mg of cholesterol/day.

        \n\n7. A mixture of oil is preferred than single oil. Poly unsaturated fatty acids
        and monounsaturated fatty acids containing vegetable oils (sunflower oil,
        groundnut oil, corn oil, gingelly oil) are preferred than hydrogenated fat
        (ghee, butter, etc.)

        \n\n8. Limit salt and salted foods. Sodium intake should not be no more than 6gm
        daily. Diabetics are susceptible to high blood pressure. For persons with
        hypertension and diabetes, the intake should be reduced to less than 3 g/
        day.

        \n\n9. Drink plenty of water and exercise regularly. Exercise increases sensitivity
        to insulin and helps to improve blood-sugar control.

        \n\n10. Avoid junk foods, aerated drinks and stick to natural drinks like fresh juice
        and water.

        \n\n11. Avoid ‘fasting’ and ‘feasting’.
    </string>

    <string name="probal_git"><a href="https://Github.com/Master-COLLiDER">Probal D. Saikia :\n Github.com/Master-COLLiDER</a></string>
    <string name="pranab_git"><a href="https://Github.com/prnbbora4">Pranab Bora:\n Github.com/prnbbora4</a></string>
    <string name="diabetes_mellitus">DIABETES MELLITUS</string>
    <string name="slideactivity_paragraph_1">\t\t\tDiabetes mellitus is a chronic metabolic disorder that prevents the body to utilize glucose completely or partially. It is characterized by absolute or relative deficiencies in insulin secretion and/or insulin action associated with chronic hyperglycemia and disturbances of carbohydrate, lipid, and protein metabolism. Most of the foods that are consumed, turns into glucose or sugar, for the bodies to use for energy. When the amount of glucose in the blood increases, e.g., after a meal, it triggers the release of the hormone insulin from the pancreas. In diabetic patient, the body either does not make enough insulin or cannot use its own insulin as well as it should. This causes sugars to build up in your blood.</string>
    <string name="there_are_two_major_forms_of_diabetes">There are two major forms of diabetes:</string>
    <string name="type_1_diabetes">1) Type 1 diabetes or Insulin dependent diabetes mellitus (IIDM):</string>
    <string name="type_1_diabetes_para">Type 1 diabetes which usually develops in childhood and adolescence but can also occur at any age. It can often occur when there is a family history of any form of diabetes. This type of diabetes is primarily due to autoimmune-mediated destruction of pancreatic beta cells, resulting in insulin deficiency and thus requires a daily dose of insulin for good health and survival.</string>
    <string name="type_2_diabetes">2) Type 2 diabetes or Non-insulin dependent diabetes mellitus (NIDDM):</string>
    <string name="type_2_diabetes_para">It usually affects overweight and obese adults and is characterized by high blood glucose, abnormal secretion of insulin or resistance to the hormone by the body’s tissue. Age, genetics, changing lifestyle and dietary factors promote the development of the disease and can be treated by diet, exercise or oral anti-diabetic drugs.</string>
    <string name="dietary_guidelines_for_diabetes">DIETARY GUIDELINES FOR DIABETES</string>
    <string name="logo">LOGO</string>
    <string name="powered_by">Powered by</string>
    <string name="AICRP">AICRP on Home Science College of Community Science AAU, Jorhat</string>
    <string name="and">And</string>
    <string name="ICAR">ICAR-Central Institute For Women In Agriculture, Bhubaneswar</string>
    <string name="about">The app ‘Diab - Fix’ is a research and evidence based app designed and developed by a team of experts in the field of Food, Nutrition and Dietetics under All India Coordinated Research Project of Department of Food Science and Nutrition, Assam Agricultural University, Jorhat. The app is targeted to educate and empower pre-diabetic and diabetic for lifestyle management.</string>
    <string name="anshuman_hazarika">Anshuman Hazarika</string>
    <string name="research_team">Research Team :</string>


</resources>
