<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splashScreenLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-131dp"
        android:text="Diab-Fix"
        android:textColor="#FF0000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/splashScreenLogo"
        android:layout_width="130dp"
        android:layout_height="166dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:text="@string/powered_by"
        android:textSize="15sp"
        android:textStyle="italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AICRP"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginBottom="120dp"
        android:textColor="#62AE0A"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ICAR"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"
        android:textColor="#62AE0A"/>

</RelativeLayout>