<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SlideActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"

        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Diab-Fix" />

    <View

        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_dropshadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
        />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/NewTaskHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/diabetes_mellitus"
                android:textColor="#001893"
                android:textColorHighlight="@android:color/primary_text_dark"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="@string/slideactivity_paragraph_1"
                android:textSize="18sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/there_are_two_major_forms_of_diabetes"
                android:textColor="#000310"
                android:textColorHighlight="@android:color/secondary_text_light"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:text="@string/type_1_diabetes"
                android:textColor="#001893"
                android:textColorHighlight="@android:color/primary_text_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"

                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="@string/type_2_diabetes_para"
                android:textSize="18sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="32dp"
                android:text="@string/type_2_diabetes"
                android:textColor="#001893"
                android:textColorHighlight="@android:color/primary_text_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"

                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:justificationMode="inter_word"
                android:text="@string/type_1_diabetes_para"
                android:textSize="18sp"
                tools:targetApi="o" />

        </LinearLayout>


    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/design_default_color_secondary_variant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Go to Next Page"
            android:textAlignment="center"
            android:textColor="#CDDC39"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>




</androidx.constraintlayout.widget.ConstraintLayout>